# jabber

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  rustfmt.toml  swag.js  swag.js.map  swag.ts  tsconfig.json
.github/workflows/: swag.yml
STATIC/: SOURCE_CONNECTOR.CSS  SOURCE_CONNECTOR.HTML
V0.6.66/STATIC/: SOURCE_CONNECTOR.CSS  SOURCE_CONNECTOR.HTML  SWAG.JS
base/: tsconfig.json
src/: dataTypes.rs  data_types.rs  main.rs  swag.ts
static/: index.html  swag.d.ts  swag.d.ts.map  swag.js  swag.js.map  swag.ts  tsconfig.json
swag/: package-lock.json  package.json  swag.js  swag.min.js
