[package]
name = "wacky-file-sharing-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

# [build-dependencies]
# serde_json = "1.0.103"
# swc_common = { version = "0.31.18" }
# swc_ecma_ast = { version = "0.107.2", features = ["serde", "serde-impl"] }
# swc_ecma_parser = "0.137.4"
