[package]
name = "wacky-file-sharing-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", git = "https://github.com/SergioBenitez/Rocket", features = ["uuid", "msgpack"] }
ws = { package = "rocket_ws", git = "https://github.com/SergioBenitez/Rocket/", version = "0.1.0-rc.3" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde_with = "3.2.0"
